// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createAt={0}
      description="Gum"
      id="0"
      key="0"
      note=""
    />
    <ExpenseListItem
      amount={195000}
      createAt={-345600000}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createAt={345600000}
      description="Credit"
      id="2"
      key="2"
      note=""
    />
  </div>
</div>
`;

exports[`should render expenseList with no expense 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div>
      <span
        className="list-item list-item--message"
      >
        No Expense
      </span>
    </div>
  </div>
</div>
`;
